--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,7 @@
 :root{
     --body-color:rgba(250,250,250);
     --color--white:rgba(250,250,250);
-    --first-color: rgba(110,87,224);
+    --first-color: rgb(248, 200, 67);
     --first-shadow:rgba(0,0,0,0.1);
 
     --box-color:#fff;
@@ -39,7 +39,7 @@ body.dark{
 
     --nav-icon:#fff;
     --logo-color:#fff;
-    --icon-color:#8749f2;
+    --icon-color:#f5e509;
     --mode-color:#fff;
 }
 .container{
@@ -74,6 +74,7 @@ nav{
 .nav_menu_list{
    display: flex;
    column-gap: -30px;
+   list-style: none;
 }
 .nav-menu .nav_list{
     list-style: none;
@@ -173,12 +174,12 @@ body.dark #moon{
     font-size: 40px;
     font-weight: 600;
     margin-block: 20px;
-    color: #8749f2;
+    color: #f5e509;
     margin-bottom: 10px;
 }
 .typedText{
     font-family: sans-serif;
-    color: #8749f2;
+    color: #f5e509;
     font-size: 8px;
     font-weight: 600;
     text-transform: capitalize;
@@ -205,7 +206,7 @@ body.dark #moon{
     padding: 8px 20px;
     cursor: pointer;
     border-radius: 8px;
-    background: #8749f2;
+    background: #f5e509;
     font-weight: 500;
     transition: all 0.5s ease;
 }
@@ -219,7 +220,7 @@ font-size: 10px;
 .socical_icons{
     display: flex;
     margin-top: 30px;
-    margin-left: 0px;
+    margin-left: 60px;
     gap: 30px;
 }
 .socical_icons .icon{
@@ -230,7 +231,7 @@ font-size: 10px;
     height: 40px;
     color: var(--icon-color);
     border-radius: 50%;
-    box-shadow: 0px 1px 5px 3px #8749f2;
+    box-shadow: 0px 1px 5px 3px #f5e509;
     cursor: pointer;
 }
 .icon_cercle{
@@ -239,26 +240,26 @@ font-size: 10px;
     width: 40px;
     height: 40px;
     border-radius: 50px;
-    animation: iconSlide 10s infinite alternate;
+    animation: iconSlide 5s infinite alternate;
 }
-@keyframes iconSlide {
+/* @keyframes iconSlide {
     25%{
-        border: 2px solid #e6d12e;
-        left: 0px;
+        border: 2px solid #47ea15;
+        left: 80px;
     }
     50%{
-        border: 2px solid #c40101;
-        left: 70px;
+        border: 2px solid #6380ff;
+        left: 150px;
     }
     75%{
-        border: 2px solid #8749f2;
-        left: 145px;
+        border: 2px solid #faf605;
+        left: 220px;
     }
     100%{
-        border: 2px solid #47ea15;
-        left: 216px;
+        border: 2px solid ;
+        left: 290px;
     }
-}
+} */
 .socical_icons:hover .icon_cercle{
     animation-play-state: paused;
     cursor: pointer;
@@ -291,7 +292,7 @@ font-size: 10px;
 } */
  /* main */
  .section{
-    padding-block: 5em;
+    padding-block: 10em;
  }
  .row{
     display: flex;
@@ -360,7 +361,7 @@ font-size: 10px;
     cursor: pointer;
     border: none;
     border-radius: 20px;
-    background: #8749f2;
+    background: #f5e509;
     color: #fff;
     margin-top: 20px;
     font-weight: 500;
@@ -400,7 +401,7 @@ font-size: 10px;
     height: 100%;
     width: 90%;
     border-radius: 6px;
-    background: #8749f2;
+    background: #f5e509;
     animation: progress 0.4s ease-in-out forwards;
     opacity: 0;
 }
@@ -445,7 +446,7 @@ font-size: 10px;
     color: #fff;
     padding: 2px 6px;
     border-radius: 20px;
-    background: #8749f2;
+    background: #f5e509;
 }
 
 /* Projects box*/
@@ -474,7 +475,7 @@ font-size: 10px;
 }
 .project-box > i {
     font-size: 50px;
-    color: #8749f2;
+    color: #f5e509;
     margin-bottom: 25px;
 }
 .project-box label{
@@ -486,7 +487,7 @@ font-size: 10px;
     content: "";
     position: absolute;
     bottom: -100%;
-    background: #8749f2;
+    background: #f5e509;
     width: 100%;
     height: 100%;
     transition: 0.4s;
@@ -533,7 +534,7 @@ font-size: 10px;
     margin-block: 5px;
 }
 .contact-info::after{
-    color: #8749f2;
+    color: #f5e509;
 }
 .contact-info:hover.contact-info h2,
 .contact-info:hover.contact-info p,
@@ -560,7 +561,7 @@ font-size: 10px;
     background: transparent;
     border: 2px solid #aaa;
     padding-inline: 20px;
-    border-radius: 10px;
+    border-radius: 15px;
     outline: none;
 }
 .input-subject{
@@ -568,7 +569,7 @@ font-size: 10px;
     height: 55px;
     background: transparent;
     border: 2px solid #aaa;
-    border-radius: 10px;
+    border-radius: 15px;
     padding-inline: 20px;
     margin-bottom: 10px;
     outline: none;
@@ -579,6 +580,7 @@ textarea{
     background: transparent;
     border: 2px solid #aaa;
     padding: 15px 20px;
+    border-radius: 15px;
     color: var(--text-color);
     outline: none;
     resize: none;
@@ -589,7 +591,7 @@ textarea{
     justify-content: center;
     margin-left: 44%;
     border: none;
-    background: #8749f2;
+    background: #f5e509;
     padding: 10px 20px;
     border-radius: 30px;
     color: #fff;
@@ -601,16 +603,16 @@ textarea{
 }
 /* footer box */
 footer {
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-    flex-direction: column !important;
-    row-gap: 20px !important;
-    background: var(--body-color) !important;
-    padding-block: 40px 60px !important;
+    display: flex ;
+    justify-content: center ;
+    align-items: center ;
+    flex-direction: column ;
+    row-gap: 20px ;
+    background: var(--body-color) ;
+    padding-block: 20px 40px ;
 }
 .icon i {
-    font-family: 'Unicons', sans-serif !important;
+    font-family: 'Unicons', sans-serif ;
     font-size: 24px;
     color: inherit;
 }
@@ -625,10 +627,10 @@ footer {
     text-decoration: none;
     color: var(--text-color);
     font-weight: 500;
-    margin-inline: 20px;
+    margin-inline: 10px;
 }
 .footer_menu_list a:hover{
-    color: #8749f2;
+    color: #f5e509;
 }
 .footer-socical-icons{
   display: flex;
@@ -653,8 +655,8 @@ footer {
         height: 320px;
     }
 }
-/* media query = 9000px */
-@media only screen and (max-width:1024px){
+/* media query = 900px */
+@media only screen and (max-width:900px){
     .nav-menu-btn{
        display: none;
     }
@@ -695,7 +697,7 @@ footer {
         order: 2;
         justify-content: center;
         align-content: flex-start;
-        min-height: 60vh;
+        min-height: 50vh;
     }
     .socical_icons{
         margin-top: 2em;
@@ -703,14 +705,14 @@ footer {
     .featured-image{
         order: 1;
         justify-content: center;
-        min-height: 150px;
+        min-height: 0px;
         width: 100%;
-        margin-top: 65px;
+        margin-top: -800px;
     }
     .image,
     .image img{
-        width: 150px;
-        height: 150px;
+        width: 130px;
+        height: 130px;
     }
     .row{
         display: flex;
