--- a/portfolio.css
+++ b/portfolio.css
@@ -180,7 +180,7 @@ body.dark #moon{
 .typedText{
     font-family: sans-serif;
     color: #f5e509;
-    font-size: 8px;
+    font-size: 40px;
     font-weight: 600;
     text-transform: capitalize;
 }
@@ -344,6 +344,7 @@ font-size: 10px;
     left: 20px;
     z-index: 1;
     background-color: #fff;
+    border: 1px solid white;
     max-width: 90px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
 }
@@ -373,10 +374,17 @@ font-size: 10px;
     max-width: 600px;
     width: 100%;
     background: transparent;
-    box-shadow: 1px 8px 10px 2px var(--first-shadow);
+    box-shadow: 1px 8px 1px 2px var(--first-shadow);
     padding: 10px 20px;
     border: 2px solid #fff;
     border-radius: 20px;
+}
+.tete h2{
+    font-weight: 600px;
+    position: relative;
+    color: var(--text-color);
+    margin-top: 60px;
+    left: 30px;
 }
 .skill .skill-box{
     width: 100%;
@@ -401,17 +409,17 @@ font-size: 10px;
     height: 100%;
     width: 90%;
     border-radius: 6px;
-    background: #f5e509;
+    background: #d6cd49;
     animation: progress 0.4s ease-in-out forwards;
     opacity: 0;
 }
 .skill-per.html{
     animation-delay: 0.1s;
-    width: 75%;
+    width: 60%;
 }
 .skill-per.css{
     animation-delay: 0.1s;
-    width: 70%;
+    width: 50%;
 }
 .skill-per.php{
     animation-delay: 0.1s;
@@ -419,7 +427,7 @@ font-size: 10px;
 }
 .skill-per.python{
     animation-delay: 0.1s;
-    width: 40%;
+    width: 50%;
 }
 .skill-per.nodjs{
     animation-delay: 0.1s;
@@ -448,7 +456,94 @@ font-size: 10px;
     border-radius: 20px;
     background: #f5e509;
 }
-
+/* skill1 bix1 */
+.skill1{
+    position: relative;
+    max-width: 600px;
+    width: 100%;
+    background: transparent;
+    box-shadow: 1px 8px 1px 2px var(--first-shadow);
+    padding: 10px 20px;
+    border: 2px solid #fff;
+    border-radius: 20px;
+}
+.tete1 h2{
+    font-weight: 600px;
+    position: relative;
+    color: var(--text-color);
+    margin-top: 60px;
+    left: 30px; 
+}
+.skill1 .skill-box1{
+    width: 100%;
+    margin: 25px 0;
+}
+.skill-box1 .title1{
+    display: block;
+    font-size: 14px;
+    font-weight: 600;
+    color: var(--text-color);
+}
+.skill-box1 .skill-bar1{
+    height:8px;
+    width: 100%;
+    border-radius: 6px;
+    margin-top: 6px;
+    background: rgba(0,0,0,0.1);
+}
+.skill-box1 .skill-per1{
+    position: relative;
+    display: block;
+    height: 100%;
+    width: 90%;
+    border-radius: 6px;
+    background: #f5e509;
+    animation: progress 0.4s ease-in-out forwards;
+    opacity: 0;
+}
+.skill-per1.html1{
+    animation-delay: 0.1s;
+    width: 75%;
+}
+.skill-per1.css1{
+    animation-delay: 0.1s;
+    width: 70%;
+}
+.skill-per1.php1{
+    animation-delay: 0.1s;
+    width: 70%;
+}
+.skill-per1.python1{
+    animation-delay: 0.1s;
+    width: 40%;
+}
+.skill-per1.nodjs1{
+    animation-delay: 0.1s;
+    width: 65%;
+}
+.skill-per1.java1{
+    animation-delay: 0.1s;
+    width: 60%;
+}
+@keyframes progress {
+    0% {
+        width: 0;
+        opacity: 1;
+    }
+    100%{
+        opacity: 1;
+    }
+}
+.skill-per1 .tooltip1{
+    position: absolute;
+    right: -14px;
+    top: -20px;
+    font-size: 9px;
+    color: #fff;
+    padding: 2px 6px;
+    border-radius: 20px;
+    background: #f5e509;
+}
 /* Projects box*/
 
 .project-container {
@@ -708,11 +803,12 @@ footer {
         min-height: 0px;
         width: 100%;
         margin-top: -800px;
+
     }
     .image,
     .image img{
-        width: 130px;
-        height: 130px;
+        width: 250px;
+        height: 250px;
     }
     .row{
         display: flex;
